# Sys-Monitor

./: .gitignore  CMakeLists.txt  LICENSE  README.md
includes/: MainWindow.h  fileSystemInfo.h  fileSystemsTab.h  processInfo.h  processManager.h  processTab.h  processesTab.h  resourceMonitor.h  resourceTab.h  resourcesTab.h
resources/qml/: cpuGraph.qml  diskGraph.qml  memGraph.qml  networkGraph.qml  qml.qrc
src/: MainWindow.cpp  fileSystemsTab.cpp  main.cpp  mainWindow.cpp  processManager.cpp  processTab.cpp  processesTab.cpp  resourceMonitor.cpp  resourcesTab.cpp
